Add Featured Component with Animations and Product Details
- Implemented the `Featured` component to display a highlighted product with detailed description and call-to-action buttons.
- Utilized `framer-motion` to animate the appearance of product details and images using `fadeIn` from the `utils/motion` module.
- Added a product description, "Read More" link, and "Add to Cart" button with appropriate styling and hover effects.
- Included a responsive layout with grid support for different screen sizes, ensuring a clean and organized display.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,32 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
+}
+h1 {
+  @apply text-4xl sm:text-6xl font-semibold mb-3;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+button {
+  @apply rounded-md px-3 py-2 transition delay-150 duration-300 hover:scale-105 flex gap-2 items-center shadow-md;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn-primary {
+  @apply bg-primary text-white;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.btn-secondary {
+  @apply bg-secondary text-white;
 }
