--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ h1 {
   @apply text-4xl sm:text-6xl font-semibold mb-3;
 }
 
+h2 {
+  @apply text-3xl sm:text-4xl font-semibold mb-3;
+}
+
 button {
   @apply rounded-md px-3 py-2 transition delay-150 duration-300 hover:scale-105 flex gap-2 items-center shadow-md;
 }
