Updating components/ProductDiv
The ProductDiv comonent is ready, at the monent the cards are displayed nicely, the card has a centered photo, an addd button to the cards with a basket, name and price.
- Add some css rules

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,9 @@ button {
 .btn-secondary {
   @apply bg-secondary text-white;
 }
+.btn-outline {
+  @apply border-2 border-primary bg-white text-primary hover:bg-primary hover:text-white;
+}
+.box {
+  @apply rounded-lg bg-gray-100 shadow-xl;
+}
