--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ h2 {
   @apply text-3xl sm:text-4xl font-semibold mb-3;
 }
 
+h3 {
+  @apply text-2xl font-bold mb-3;
+}
+
 button {
   @apply rounded-md px-3 py-2 transition delay-150 duration-300 hover:scale-105 flex gap-2 items-center shadow-md;
 }
@@ -79,4 +83,8 @@ table thead tr td {
 
 table tr tr {
   @apply p-3;
+}
+
+img {
+  @apply max-w-[100%] max-h-[100%];
 }
